# reefy-video-ai-bench

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-intel.txt  requirements-nvidia.txt  requirements.txt
docs/images/: virat-frame-101s-intel-npu-detections.json
raw_video_detector_bench/: __init__.py  bench.py
results/: VIRAT_S_050203_07_001288_001531-intel-igpu-default-10min.json  VIRAT_S_050203_07_001288_001531-intel-npu-default-10min.json  VIRAT_S_050203_07_001288_001531-nvidia-rtx5060ti-default-11loops.json
